@@ -1,4 +1,6 @@
 0.07
+ [Common]
+ - Update Module::Install to 1.19 version.
 
 0.06 2016-03-23T21:19:20+01:00
  [Tags::Output::Raw]
